Added text to main3

--- a/main3.html
+++ b/main3.html
@@ -7,6 +7,7 @@
   <title>GitProject2018</title>
 </head>
 <body>
-Lorem Ipsum Dolor Sit Amet
+Lorem Ipsum Dolor Sit Amet<br>
+Hello there!
 </body>
 </html>
