Corrected file names

--- a/jere.html
+++ b/jere.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>GitProject2018</title>
+  <title>Jere's githubproject html file</title>
 </head>
 <body>
-	<h1>I HAVE THE POWER</h1>
+  <p>Hello Jere - Eemeli</p>
+  <p>Hello there</p>
 </body>
 </html>
