--- a/konsta.html
+++ b/konsta.html
@@ -9,7 +9,7 @@
 <body>
 Lorem Ipsum Dolor Sit Amet<br>
 Hello there!
-Lorem Ipsum Dolor Sit Amet
-<p>Hello There Konsta</p>
+<p>Hello There!</p> 
+<p>Today is Konsta's bday! He is now 21 years!</p>
 </body>
 </html>
